--- a/index.html
+++ b/index.html
@@ -158,6 +158,29 @@
                     <li>Metal Gear Solid V - The Phantom Pain</li>
                     <li>Metal Slug XX</li>
                     <li>Midnight Club 3</li>
+                    <li>Minecraft</li>
+                    <li>Mirrors Edge</li>
+                    <li>Mortal Kombat</li>
+                    <li>Mortal Kombat - Shaolin Monks (XboxClassic)</li>
+                    <li>Mortal Kombat VS DC Universe</li>
+                    <li>Motocycle Club</li>
+                    <li>MX VS ATV Supercross</li>
+                    <li>Naruto - Storm 2</li>
+                    <li>Naruto - Storm 3</li>
+                    <li>Naruto - Storm Revolution</li>
+                    <li>Need for Speed - Most Wanted</li>
+                    <li>Need for Speed - ProStreet</li>
+                    <li>Need for Speed - Rivals</li>
+                    <li>Need for Speed - Shift</li>
+                    <li>Need for Speed - The Run</li>
+                    <li>Need for Speed - Undercover</li>
+                    <li>Need for Speed - Hot Pursuit</li>
+                    <li>Ninja Gaiden 3 - Razor's Edge</li>
+                    <li>PayDay 2</li>
+                    <li>Pirates of the Caribbean - At Worlds End</li>
+                    <li>Portal 2</li>
+                    <li>Prision Break</li>
+                    <li>PES 2018</li>
                 </ul>
             </div>
         </section>
