--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <section id="ListaDeJogos">
             <h2>Lista de Jogos</h2>
-            <div class="bloco">
+            <div class="bloco" id="JogosDaLista">
                 <ul>
                     <li>007 - Blood Stone</li>
                     <li>007 - GoldenEye</li>
@@ -162,12 +162,12 @@
                     <li>Mirrors Edge</li>
                     <li>Mortal Kombat</li>
                     <li>Mortal Kombat - Shaolin Monks (XboxClassic)</li>
-                    <li>Mortal Kombat VS DC Universe</li>
+                    <li>Mortal Kombat vs. DC Universe</li>
                     <li>Motocycle Club</li>
-                    <li>MX VS ATV Supercross</li>
-                    <li>Naruto - Storm 2</li>
-                    <li>Naruto - Storm 3</li>
-                    <li>Naruto - Storm Revolution</li>
+                    <li>MX vs. ATV Supercross</li>
+                    <li>Naruto Shippuden - Ultimate NinjaStorm 2</li>
+                    <li>Naruto Shippuden - Ultimate NinjaStorm 3</li>
+                    <li>Naruto Shippuden - Ultimate NinjaStorm Revolution</li>
                     <li>Need for Speed - Most Wanted</li>
                     <li>Need for Speed - ProStreet</li>
                     <li>Need for Speed - Rivals</li>
@@ -181,11 +181,83 @@
                     <li>Portal 2</li>
                     <li>Prision Break</li>
                     <li>PES 2018</li>
+                    <li>Rayman Legends</li>
+                    <li>Rayman Origins</li>
+                    <li>Resident Evil Remake HD</li>
+                    <li>Resident Evil 4</li>
+                    <li>Resident Evil 5</li>
+                    <li>Resident Evil 6</li>
+                    <li>Resident Evil - Operation Raccoon City</li>
+                    <li>Resident Evil - Revelations</li>
+                    <li>Resident Evil - Revelations 2</li>
+                    <li>Red Dead Redemption</li>
+                    <li>Saints Row IV</li>
+                    <li>Scott Pilgrim vs. The World</li>
+                    <li>Shadow of Mordor</li>
+                    <li>Silent Hill HD Collection</li>
+                    <li>Simpsons - Hit and Run</li>
+                    <li>Skate 3</li>
+                    <li>Skyrim</li>
+                    <li>Sleeping Dogs</li>
+                    <li>Slender The Arrival</li>
+                    <li>Sniper Elite V2</li>
+                    <li>Sniper Elite III</li>
+                    <li>Sniper Ghost Warrior</li>
+                    <li>Sniper Ghost Warrior 2</li>
+                    <li>Sonic 4 - Episode I</li>
+                    <li>Sonic 4 - Episode II</li>
+                    <li>Sonic and Sega - All Star Racing</li>
+                    <li>Sonic Free Riders</li>
+                    <li>Sonic Generations</li>
+                    <li>Sonic Unleashed</li>
+                    <li>Spider-Man 3</li>
+                    <li>Spider-Man - Edge of Time</li>
+                    <li>Spider-Man - Friend or Foe</li>
+                    <li>Spider-Man - Shattered Dimensions</li>
+                    <li>Spider-Man - The Amazing Spider-Man</li>
+                    <li>Spider-Man - The Amazing Spider-Man 2</li>
+                    <li>Spider-Man - Web of Shadows</li>
+                    <li>Splinter Cell - Blacklist</li>
+                    <li>Splinter Cell - Conviction</li>
+                    <li>Splinter Cell - Double Agent</li>
+                    <li>SpongeBob's - Truth or Square</li>
+                    <li>Star Wars - Battlefront 2</li>
+                    <li>Star Wars - The Force Unleashed II</li>
+                    <li>Street Fighter x Tekken</li>
+                    <li>Super Meat Boy</li>
+                    <li>Supremacy MMA</li>
+                    <li>Terraria</li>
+                    <li>The Evil Within</li>
+                    <li>The Fancy Pants Adventures</li>
+                    <li>The Legend of Korra</li>
+                    <li>The Sims 3</li>
+                    <li>Transformers - Dark of the Moon</li>
+                    <li>UFC Undisputed 3</li>
+                    <li>Ultimate Marvel vs. Capcom 3</li>
+                    <li>Ultra Street Fighter IV</li>
+                    <li>UNO</li>
+                    <li>Vigilante 8 Arcade</li>
+                    <li>Watch Dogs</li>
+                    <li>Wolfenstein</li>
+                    <li>WWE 2K17</li>
                 </ul>
             </div>
         </section>
         <section id="HDs">
+            <h2>Lista de HDs</h2>
+            <div class="bloco" id="ListaDeHDs">
+                <ol type="I">
+                    <li>320 GB (Com Case) - 44 Jogos</li>
+                    <li>250 GB (Com Case) - 56 Jogos</li>
+                    <li>250 GB (Com Case) - 52 Jogos</li>
+                    <li>250 GB (Sem Case) - 48 Jogos</li>
+                    <li>120 GB (Sem Case) - 16 Jogos</li>
+                    <li>40 GB (Sem Case) - 19 Jogos</li>
+                </ol>
+            </div>
+            <div class="HD" id="500GB">
 
+            </div>
         </section>
     </body>
 </html>
