--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
             <h2>Lista de HDs</h2>
             <div class="bloco" id="ListaDeHDs">
                 <ol type="I">
+                    <li>500 GB (Com Case) - 92 Jogos</li>
                     <li>320 GB (Com Case) - 44 Jogos</li>
                     <li>250 GB (Com Case) - 56 Jogos</li>
                     <li>250 GB (Com Case) - 52 Jogos</li>
