--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li>250 GB (Com Case) - 56 Jogos</li>
                     <li>250 GB (Com Case) - 52 Jogos</li>
                     <li>250 GB (Sem Case) - 48 Jogos</li>
+                    <li>160 GB (Sem Case) - 25 Jogos</li>
                     <li>120 GB (Sem Case) - 16 Jogos</li>
                     <li>40 GB (Sem Case) - 19 Jogos</li>
                 </ol>
