--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <h2>Lista de HDs</h2>
             <div class="bloco" id="ListaDeHDs">
                 <ol type="I">
+                    <li>500 GB (Sem Case) - 78 Jogos</li>
                     <li>320 GB (Sem Case) - 48 Jogos</li>
                     <li>320 GB (Com Case) - 44 Jogos</li>
                     <li>250 GB (Com Case) - 56 Jogos</li>
